opam-version: "1.2"
version: "v0.9.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/incr_dom"
bug-reports: "https://github.com/janestreet/incr_dom/issues"
dev-repo: "https://github.com/janestreet/incr_dom.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "incr_dom" "--root" "." "-j" jobs "@install"]
]
depends: [
  "async_js"                {>= "v0.9" & < "v0.10"}
  "async_kernel"            {>= "v0.9" & < "v0.10"}
  "core_kernel"             {>= "v0.9" & < "v0.10"}
  "incr_map"                {>= "v0.9" & < "v0.10"}
  "incr_select"             {>= "v0.9" & < "v0.10"}
  "incremental_kernel"      {>= "v0.9" & < "v0.10"}
  "jbuilder"                {build & >= "1.0+beta2"}
  "ppx_driver"              {>= "v0.9" & < "v0.10"}
  "ppx_jane"                {>= "v0.9" & < "v0.10"}
  "virtual_dom"             {>= "v0.9" & < "v0.10"}
  "js_of_ocaml"
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
A library for building dynamic webapps, using Js_of_ocaml.

The library is designed roughly on a model/view/controller model.
Your application is built out of:

- A functional model type that tracks the state of your application.

- An incremental /view/ function for computing an HTML-like
  representation of how your application should render on the browser.
  The is based on the [[https://github.com/Matt-Esch/virtual-dom][virtual-dom]] javascript library.

- An action type that is used to schedule events that update the
  model.

Combined with the ability to use Async, and in particular to send out
network requests using websockets, this should allow the easy
construction of rich web applications in a fairly comprehensible
style.

If you want a more concrete sense of how this works, look in the
examples directory.
"
