opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/incr_dom"
bug-reports: "https://github.com/janestreet/incr_dom/issues"
dev-repo: "git+https://github.com/janestreet/incr_dom.git"
license: "MIT"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "async_js"
  "async_kernel"
  "core_kernel"
  "incr_map"
  "incr_select"
  "incremental"
  "ppx_jane"
  "virtual_dom"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "js_of_ocaml"             {>= "3.0"}
  "js_of_ocaml-ppx"
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
A library for building dynamic webapps, using Js_of_ocaml.

The library is designed roughly on a model/view/controller model.
Your application is built out of:

- A functional model type that tracks the state of your application.

- An incremental /view/ function for computing an HTML-like
  representation of how your application should render on the browser.
  The is based on the [[https://github.com/Matt-Esch/virtual-dom][virtual-dom]] javascript library.

- An action type that is used to schedule events that update the
  model.

Combined with the ability to use Async, and in particular to send out
network requests using websockets, this should allow the easy
construction of rich web applications in a fairly comprehensible
style.

If you want a more concrete sense of how this works, look in the
examples directory.
"
