(library
 (name incr_dom)
 (public_name incr_dom)
 (preprocess
  (pps js_of_ocaml-ppx ppx_jane))
 (libraries async_js async_kernel core virtual_dom.css_gen incr_map
   incr_select incremental javascript_profiling js_of_ocaml
   virtual_dom.ui_effect bonsai_concrete.ui_incr bonsai_concrete.metrics
   bonsai_concrete.ui_time_source vdom_file_download virtual_dom))
